--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="css\font-awesome.css">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <header>
             <div class="masthead">
                 <div class="main-masthead">
+                    <div class="search">
+                        <form action="" method="">
+                            <input type="text" name="" value="" >
+                        </form>
+                    </div>
                     <ul>
                         <li><a href="#">خانه</a></li>
                         <li><a href="#">درباره ی ما</a></li>
@@ -16,7 +22,93 @@
                         <li><a href="#">تبلیغات</a></li>
                     </ul>
                 </div>
-            </div>
+            </div>    
         </header>
+        <div id="main">
+            <nav id="header-nav">
+                <ul>
+                    <li style="background-color: #2ecc71;"><a href="#"><div class="fa fa-home fa-4x"></div><div class="nav-txt">صفحه ی اصلی</div></a></li>
+                    <li style="background-color:#2980b9 ;"><a href="#"><div class="fa fa-gears fa-4x"></div><div class="nav-txt">نرم افزار</div></a></li>
+                    <li style="background-color: #e74c3c;"><a href="#"><div class="fa fa-gamepad fa-4x"></div><div class="nav-txt">بازی</div></a></li>
+                    <li style="background-color: #1abc9c;"><a href="#"><div class="fa fa-pencil fa-4x"></div><div class="nav-txt">آموزش</div></a></li>
+                    <li style="background-color: #f39c12;"><a href="#"><div class="fa fa-android fa-4x"></div><div class="nav-txt">اندروید</div></a></li>
+                    <li style="background-color:#8e44ad ;"><a href="#"><div class="fa fa-code fa-4x"></div><div class="nav-txt">توسعه ی وب</div></a></li>
+                    <li style="background-color: #34495e;"><a href="#"><div class="fa fa-code-fork fa-4x"></div><div class="nav-txt">شبکه</div></a></li>
+                </ul>
+            </nav>
+            <div class="logo">
+                <img src="images/logo.png" alt="Behrooz" title="">
+            </div>
+            <div class="clear"></div>
+            <section id="metro-box">
+                <div class="column">
+                    <div class="metro-item big">
+                        <div class="box-img">
+                            <a href=""><img src="images/slider/1.jpg" alt=""></a>
+                            <div class="metro-content">
+                                <h3>تماس های رایگان با LINE:Free Calls & Messages v4.1.0</h3>
+                                <div class="description">
+                                    <p>
+                                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="metro-item">
+                        <div class="box-img">
+                            <a href=""><img src="images/slider/2.jpg" alt=""></a>
+                            <div class="metro-content">
+                                <h3>تماس های رایگان با LINE:Free Calls & Messages v4.1.0</h3>
+                                <div class="description">
+                                    <p>
+                                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="metro-item">
+                        <div class="box-img">
+                            <a href=""><img src="images/slider/3.jpg" alt=""></a>
+                            <div class="metro-content">
+                                <h3>تماس های رایگان با LINE:Free Calls & Messages v4.1.0</h3>
+                                <div class="description">
+                                    <p>
+                                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="metro-item">
+                        <div class="box-img">
+                            <a href=""><img src="images/slider/4.jpg" alt=""></a>
+                            <div class="metro-content">
+                                <h3>تماس های رایگان با LINE:Free Calls & Messages v4.1.0</h3>
+                                <div class="description">
+                                    <p>
+                                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="metro-item">
+                        <div class="box-img">
+                            <a href=""><img src="images/slider/6.jpg" alt=""></a>
+                            <div class="metro-content">
+                                <h3>تماس های رایگان با LINE:Free Calls & Messages v4.1.0</h3>
+                                <div class="description">
+                                    <p>
+                                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
     </body>
 </html>
